# educabot

./: .editorconfig  .env-example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  driver.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: README.md  env.py
alembic/versions/: 35a709e53893_create_gestor_table.py  3c1352d37922_initial_schema.py  9fb77e07e584_create_initial_models.py  f74a7b6fb649_initial_schema.py
app/: README.md  main.py
app/api/: README.md  gestores.py  health.py  pedidos.py  test_evolution.py  webhook.py
app/clients/: README.md  evolution_client.py
app/core/: README.md  config.py
app/db/: README.md  base.py  base_imports.py  session.py
app/models/: README.md  gestor.py  log.py  pedido.py  responsavel.py
app/repositories/: README.md  gestor_repository.py  pedido_repository.py  responsavel_repository.py
app/schemas/: README.md  evolution.py  gestor.py  pedido.py
app/services/: README.md  command_service.py  evolution_client.py  evolution_service.py  gestor_service.py  message_processor_service.py  notification_service.py  pedido_service.py  permission_service.py  request_limit_service.py  responsavel_service.py
app/utils/: README.md  evolution_parser.py  insert_gestores.py  insert_responsavel_example.py  logger.py  regex.py
docker/postgres/: init.sql
scripts/: init_project.sh  init_service.sh  menu.sh  remove_service.sh
