[project]
name = "educabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

#################### ( Dependencies ) ####################

requires-python = ">=3.12,<=3.14"

dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]


################### ( Ruff Settings ) ####################

[tool.ruff]
line-length = 79
exclude = [
    ".venv",
    "alembic/versions",
    "migrations",
    "__pycache__",
    "**/driver.py",
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


################## ( Testing Settings ) ##################

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

# Filtrar warnings chatos, mas não esconder tudo
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

# Ativar automaticamente o pytest-django
django_find_project = true

# Opções extras para deixar a saída limpa
addopts = [
    "--disable-warnings",
    "--maxfail=1"
]

[tool.coverage.run]
omit = [
    "*/__init__.py",
]
