[project]
name = "educabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

#################### ( Dependencies ) ####################

requires-python = ">=3.12,<=3.14"

dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
